samples/_failures_safe/1761178299_6f4fd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd117ae1.c: In function ‘main’:
./samples/SAFE/__tmp_fd117ae1.c:150:13: error: expected declaration or statement at end of input
  150 |             case 2: {
      |             ^~~~
./samples/SAFE/__tmp_fd117ae1.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd117ae1.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fd117ae1.c:150:13: error: expected declaration or statement at end of input
